--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "tabWidth": 2,
   "jsxSingleQuote": true,
   "bracketSpacing": true,
-  "semi": true
+  "semi": true,
+  "bracketSameLine": true
 }
